# PersonalDigestAgent

./: .gitignore  AGENTS.md  README.md  Requirements.md  main.py  pyproject.toml
config/: settings.yaml  sources.yaml
docs/: PROJECT_STATUS.md
src/personal_digest/: bootstrap.py  logging_config.py  settings.py  utils.py
src/personal_digest/application/: __init__.py  pipeline.py  scheduler.py  services.py  use_cases.py
src/personal_digest/domain/: __init__.py  exceptions.py  models.py  ports.py
src/personal_digest/infrastructure/extractor/: __init__.py  http_content_extractor.py
src/personal_digest/infrastructure/feed/: __init__.py  feedparser_provider.py
src/personal_digest/infrastructure/llm/: __init__.py  openai_provider.py
src/personal_digest/infrastructure/notify/: __init__.py  smtp_notifier.py
src/personal_digest/infrastructure/persistence/: __init__.py  sqlite.py
src/personal_digest/infrastructure/rendering/: __init__.py  jinja_renderer.py
src/personal_digest/interfaces/: __init__.py
src/personal_digest/interfaces/cli/: __init__.py  main.py
templates/: digest_email.html.j2
tests/integration/: test_pipeline.py
tests/unit/: test_digest_services.py  test_extractor.py  test_feed_provider.py  test_llm_provider.py  test_renderer.py  test_utils.py
